# tauri-fastapi-react-app

./: .gitignore  README.md  main.spec  package.json  pnpm-lock.yaml  pyproject.toml
hooks/: pyinstaller.py
src/: App.tsx
src-python/: main.py  pyinstaller.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
